<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/vlin_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/vlin_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#38C5C6"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:paddingTop="130dp"
                android:paddingRight="10dp"
                android:text="@string/_576"
                android:textColor="#fff"
                android:textSize="45sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hlin_grp1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/_7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/_8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/_9"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btnDiv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:contentDescription="@string/divide"
                app:srcCompat="@drawable/divide" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hlin_grp2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/_4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/_5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/_6"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btnMul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:contentDescription="@string/multiply"
                app:srcCompat="@drawable/multiply" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hlin_grp3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/_1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/_2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/_3"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btnSub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:contentDescription="@string/substract"
                app:srcCompat="@drawable/subtract" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hlin_grp4"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:background="#fff"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnClr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#3AC5C6"
                    android:padding="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/clear"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#fff"
                android:text="@string/_0"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:contentDescription="@string/add"
                app:srcCompat="@drawable/add" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnEqu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/result"
        app:layout_constraintBottom_toBottomOf="@+id/vlin_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vlin_main"
        app:layout_constraintVertical_bias="0.41"
        app:srcCompat="@drawable/equal" />

</android.support.constraint.ConstraintLayout>